--- a/ProjectTimer/ProjectTimer.UWP/project.json
+++ b/ProjectTimer/ProjectTimer.UWP/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "MvvmLightLibs": "5.3.0",
     "Xamarin.Forms": "2.3.4.224"
   },
   "frameworks": {
