--- a/ProjectTimer/ProjectTimer.UWP/project.json
+++ b/ProjectTimer/ProjectTimer.UWP/project.json
@@ -1,8 +1,9 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.2",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "MvvmLightLibs": "5.3.0",
-    "Xamarin.Forms": "2.3.4.224"
+    "sqlite-net-pcl": "1.3.1",
+    "Xamarin.Forms": "2.3.4.231"
   },
   "frameworks": {
     "uap10.0": {}
